--- a/launchers/native/Cargo.toml
+++ b/launchers/native/Cargo.toml
@@ -7,6 +7,7 @@ workspace = "../.."
 [features]
 default = []
 inspect = ["{{crate_name}}/inspect"]
+steam = ["{{crate_name}}/steam"]
 
 [dependencies]
 bevy.workspace = true
