--- a/launchers/native/Makefile.toml
+++ b/launchers/native/Makefile.toml
@@ -2,7 +2,7 @@
 env_files = ["../../.env"]
 script_runner = "@shell"
 script.pre = "rm -fr ./assets/* && cp -r ../../assets/* ./assets"
-script.main = "mold -run cargo run --features inspect"
+script.main = "mold -run cargo run --features inspect steam"
 watch.watch = [
     "../../src",
     "../../assets",
